--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <title>My Site Title</title>
+</head>
+<body>
+    <!-- This is the body section where visible content goes -->
+    <!-- Heading tag -->
+    <h1>Welcome to My Webpage</h1>
+    <!-- Paragraph tag -->
+    <p>This is a sample HTML document demonstrating basic structure and tags.</p>
+    <!-- Example of a link within the body -->
+    </body>
+</html>
